14 Jan 2008 Additional ISO-8859-1 to European EBCDIC codepages - Roger Bowler
11 Jan 2008 new 'ctc' command to enable/disable debug option on demand - Fish
03 Jan 2008 sf commands update - Greg Smith
01 Jan 2008 Data exception on nonzero bit34 in cce entry - Bernard van der Helm
31 Dec 2007 Data exceptions on fetching ece, cce and sd1 - Bernard van der Helm
31 Dec 2007 Data excep in CMPSC expansion psl and cls = 0 - Bernard van der Helm
29 Dec 2007 Some errors in UTF translation - Bernard van der Helm
29 Dec 2007 Tweak OPTION_MIPS_COUNTING tweak to prevent crash - Fish
24 Dec 2007 Compression check output, input swapped to input, output - Bernard van der Helm
11 Dec 2007 Enable SENSE ID CCW for 2703,3410,3420
10 Dec 2007 Tweaks to OPTION_MIPS_COUNTING processing - Greg
02 Dec 2007 Permit Extended-Translation-Facility-2 to be activated in S/370 mode - Roger Bowler
02 Dec 2007 Enable B9xx,EBxx opcodes in S/370 mode for ETF2 - Roger Bowler
02 Dec 2007 Permit Extended-Translation facility to be activated in S/370 mode - Roger Bowler
02 Dec 2007 Permit Compare-and-Move-Extended facility to be activated in S/370 mode - Roger Bowler
01 Dec 2007 Fix cckdcdsk/cckdcomp/cckdutil no message o/p issue - Fish
30 Nov 2007 Change all references to conmicro.cx to hercules-390.org - Jay
            Maynard
30 Nov 2007 Permit String-Instruction facility to be activated in S/370 mode -
            Roger Bowler
28 Nov 2007 Allow ALLOW DATA CHECK to precede LOAD UCS AND FOLD on 1403 for
            TSS/370 - Jay Maynard
22 Nov 2007 Store Doubleword Monitor Code for z/Arch on succesful MC -
            Ivan Warren
20 Nov 2007 LRE support (try #1) - Greg
18 Nov 2007 Activate Message-Security-Assist-Extension-1 facility in ESA/390 -
            Roger Bowler
18 Nov 2007 Permit Immediate-and-Relative facility to be activated in S/370
            mode - Roger Bowler
16 Nov 2007 Add HFP-multiply-add/subtract facility to ESA/390 - Roger Bowler