@@ -1,7 +1,8 @@
+16 Jan 2008 Data exception for only UNPRECEDED nonzero bit34 ece entries - Fish
 14 Jan 2008 Additional ISO-8859-1 to European EBCDIC codepages - Roger Bowler
 11 Jan 2008 new 'ctc' command to enable/disable debug option on demand - Fish
 03 Jan 2008 sf commands update - Greg Smith
-01 Jan 2008 Data exception on nonzero bit34 in cce entry - Bernard van der Helm
+01 Jan 2008 Data exception on nonzero bit34 in ece entry - Bernard van der Helm
 31 Dec 2007 Data exceptions on fetching ece, cce and sd1 - Bernard van der Helm
 31 Dec 2007 Data excep in CMPSC expansion psl and cls = 0 - Bernard van der Helm
 29 Dec 2007 Some errors in UTF translation - Bernard van der Helm
